frontend-todo/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background: url('')
    no-repeat center/cover;
}
.todo-app{
    background-color:purple;
    width: 100%;
    max-width: 400px;
    padding: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 30px;
    color: blanchedalmond;
    border-radius: 20px;
    box-shadow: 0 0 100px rgba(0, 0,0, 0.5);
    border: 3px solid rgba(255, 255,255, 18);
    backdrop-filter: blur(10px);
}
.input-area{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;

}
.input-area input{
    padding: 10px;
    font-size:17px;
    border: none;
    outline: none;;
    border-radius: 10px;
    background: rgba(255, 255,255, 18);
    color: black;

}

.input-area input::placeholder{
    color: black;
}
.input-area button{
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 10px;
    padding: 8px;
    border-radius: 50%;
    /* color: #fff; */
    background: rgba(255, 255,255, 0.5);
    border:2px solid rgba(255, 255,255, 0.5);
    cursor: pointer;
    transition: 0.5s ease;
}
.input-area button:hover{
    transform: scale(1.1);
    background: #fff;

}
ul li{
    list-style: none;
    font-size: 17px;
    padding: 10px;
    margin:10px;
    user-select: none;
    cursor: pointer;
    width: fit-content;
    height: fit-content;
    border: none;
    outline: none;;
    border-radius: 10px;
    background: rgba(255, 255,255, 18);
    color: black;

}
.delete-btn {
    margin-left: 10px; 
    cursor: pointer;
    color: #888;
    transition: color 0.3s ease;

    
}
.delete-btn:hover {
    color: red;
}

.edit-btn {
    margin-left: 10px;
    cursor: pointer;
    color: #888;
    transition: color 0.3s ease;
}
.edit-btn:hover {
    color: blue; 
}
.checkbox {
    margin-right: 10px; /* space between checkbox and text */
    cursor: pointer;
    color: #888;
    transition: color 0.3s ease;
  
    
}
.checkbox .checked {
  color: green;
}

